checkin show css scrollbar fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -978,6 +978,10 @@ input[type="range"] {
   margin-right: 150px;
 }
 
+.checkin-show-body {
+  height:auto;
+}
+
 // -----https://codepen.io/Bluetidepro/pen/GkpEa A PEN BY Zach Reed---
 //Copyright (c) 2017 by Zach Reed (https://codepen.io/Bluetidepro/pen/GkpEa)
 .star-ratings-css {
